crates/spelldawn/tests/it/rules/snapshots/it__rules__actions__gain_mana.snap
---
source: crates/spelldawn/tests/it/rules/actions.rs
assertion_line: 111
expression: response

---
Ok(
    GameResponse {
        command_list: CommandList {
            commands: [
                GameCommand {
                    command: Some(
                        UpdateGameView(
                            UpdateGameViewCommand {
                                game: Some(
                                    GameView {
                                        game_id: Some(
                                            GameIdentifier {
                                                value: 1,
                                            },
                                        ),
                                        user: Some(
                                            PlayerView {
                                                player_info: None,
                                                score: Some(
                                                    ScoreView {
                                                        score: 0,
                                                    },
                                                ),
                                                mana: Some(
                                                    ManaView {
                                                        amount: 6,
                                                    },
                                                ),
                                                action_tracker: Some(
                                                    ActionTrackerView {
                                                        available_action_count: 2,
                                                    },
                                                ),
                                            },
                                        ),
                                        opponent: Some(
                                            PlayerView {
                                                player_info: None,
                                                score: Some(
                                                    ScoreView {
                                                        score: 0,
                                                    },
                                                ),
                                                mana: Some(
                                                    ManaView {
                                                        amount: 5,
                                                    },
                                                ),
                                                action_tracker: Some(
                                                    ActionTrackerView {
                                                        available_action_count: 0,
                                                    },
                                                ),
                                            },
                                        ),
                                        arena: None,
                                        current_priority: User,
                                    },
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
        channel_responses: [
            (
                2,
                CommandList {
                    commands: [
                        GameCommand {
                            command: Some(
                                UpdateGameView(
                                    UpdateGameViewCommand {
                                        game: Some(
                                            GameView {
                                                game_id: Some(
                                                    GameIdentifier {
                                                        value: 1,
                                                    },
                                                ),
                                                user: Some(
                                                    PlayerView {
                                                        player_info: None,
                                                        score: Some(
                                                            ScoreView {
                                                                score: 0,
                                                            },
                                                        ),
                                                        mana: Some(
                                                            ManaView {
                                                                amount: 5,
                                                            },
                                                        ),
                                                        action_tracker: Some(
                                                            ActionTrackerView {
                                                                available_action_count: 0,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                opponent: Some(
                                                    PlayerView {
                                                        player_info: None,
                                                        score: Some(
                                                            ScoreView {
                                                                score: 0,
                                                            },
                                                        ),
                                                        mana: Some(
                                                            ManaView {
                                                                amount: 6,
                                                            },
                                                        ),
                                                        action_tracker: Some(
                                                            ActionTrackerView {
                                                                available_action_count: 2,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                arena: None,
                                                current_priority: Opponent,
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
        ],
    },
)
